# FlogstaEngine

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: normalMapping.frag  normalMapping.vert  vertexshader.vert
src/: CMakeLists.txt  Entity.hpp  FeEventHandler.cpp  FeEventHandler.hpp  FlogstaEngine.cpp  FlogstaEngine.hpp  LibIncludes.hpp  Mesh2D.cpp  Mesh2D.hpp  Mesh3D.cpp  Mesh3D.hpp  OBJFileReader.cpp  OBJFileReader.hpp  OBJFileReader.hpp~  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  ShaderProgram.cpp  ShaderProgram.hpp  main.cpp
src/temp/: OBJFileReader.cpp  OBJFileReader.hpp
